--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -27,9 +27,9 @@ jobs:
       - uses: goto-bus-stop/setup-zig@v2
         with:
           version: 0.12.0
-      - uses: actions/cache@v4.0.2
-        with:
-          enableCrossOsArchive: true
+#      - uses: actions/cache@v4.0.2
+#        with:
+#          enableCrossOsArchive: true
           run: zig fetch https://github.com/Not-Nik/raylib-zig/archive/devel.tar.gz
       - run: zig build
       - name: Release
