--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -31,7 +31,7 @@ jobs:
 #        with:
 #          enableCrossOsArchive: true
       - run: zig fetch --save https://github.com/Not-Nik/raylib-zig/archive/devel.tar.gz
-      - run: zig build
+      - run: zig build -Doptimize=ReleaseSafe -Dtarget=${{ matrix.config.target }}
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
