--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -25,13 +25,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v2
+        name: Setup zig
         with:
           version: 0.12.0
 #      - uses: actions/cache@v4.0.2
 #        with:
 #          enableCrossOsArchive: true
       - run: zig fetch --save https://github.com/Not-Nik/raylib-zig/archive/devel.tar.gz
-      - run: zig build -Doptimize=ReleaseSafe -Dtarget=${{ matrix.config.target }}
+        name: Get dependencies
+      - run: zig build -Doptimize=ReleaseSafe -Dtarget=${{ matrix.os }}
+        name: Build binary
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
