--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -23,11 +23,11 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
 #        name: host=${{ matrix.config.os }} target=${{ matrix.config.target }}
         config:
-          - if: (matrix.os == ubuntu-latest)
+          - if: (${{ matrix.os }} == ubuntu-latest)
             target: x86_64-linux-gnu
-          - if: (matrix.os == macos-latest)
+          - if: (${{ matrix.os }} == macos-latest)
             target: aarch64-macos-none
-          - if: (matrix.os == windows-latest)
+          - if: (${{ matrix.os }} == windows-latest)
             target: x86_64-windows-gnu
     runs-on: ${{ matrix.os }}
     steps:
