--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -21,14 +21,13 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-#        name: host=${{ matrix.config.os }} target=${{ matrix.config.target }}
-        config:
-          - if: (${{ matrix.os }} == ubuntu-latest)
-            target: x86_64-linux-gnu
-          - if: (${{ matrix.os }} == macos-latest)
-            target: aarch64-macos-none
-          - if: (${{ matrix.os }} == windows-latest)
-            target: x86_64-windows-gnu
+        include:
+          - os: ubuntu-latest
+            target: x86_64-linux
+          - os: macos-latest
+            target: x86_64-macos
+          - os: windows-latest
+            target: x86_64-windows
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
@@ -41,7 +40,7 @@ jobs:
 #          enableCrossOsArchive: true
       - run: zig fetch --save https://github.com/Not-Nik/raylib-zig/archive/devel.tar.gz
         name: Get dependencies
-      - run: zig build -Doptimize=ReleaseSafe -Dtarget=${{ matrix.config.target }}
+      - run: zig build -Doptimize=ReleaseSafe -Dtarget=${{ matrix.target }}
         name: Build binary
       - name: Release
         uses: softprops/action-gh-release@v1
