--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -38,7 +38,7 @@ jobs:
         
       - name: Install dependencies (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get update && sudo apt-get install -y libgl1-mesa-dev libx11-dev
+        run: sudo apt-get update && sudo apt-get install -y libgl1-mesa-dev libx11-dev libgtk-4-dev build-essential
 
       - name: Get dependencies
         run: zig fetch --save https://github.com/Not-Nik/raylib-zig/archive/devel.tar.gz
