--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -20,16 +20,16 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [macos-latest, windows-latest] #, ubuntu-latest]
         include:
-          - os: ubuntu-latest
-            target: x86_64-linux
+#          - os: ubuntu-latest
+#            target: x86_64-linux
           - os: macos-latest
             target: x86_64-macos
           - os: windows-latest
             target: x86_64-windows
     runs-on: ${{ matrix.os }}
-    steps:
+    steps:`
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v2
         name: Setup zig
