--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -29,7 +29,7 @@ jobs:
           - os: windows-latest
             target: x86_64-windows
     runs-on: ${{ matrix.os }}
-    steps:`
+    steps:
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v2
         name: Setup zig
