--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -25,7 +25,7 @@ jobs:
 #          - os: ubuntu-latest
 #            target: x86_64-linux
           - os: macos-latest
-            target: x86_64-macos
+            target: aarch64-macos-none
           - os: windows-latest
             target: x86_64-windows
     runs-on: ${{ matrix.os }}
