--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -40,9 +40,9 @@ jobs:
         if: matrix.os == 'ubuntu-latest'
         run: sudo apt-get update && sudo apt-get install -y libgl1-mesa-dev libx11-dev libgtk-4-dev build-essential
 
-      - name: Install dependencies (MacOS)
+      - name: Set SDKROOT for macOS
         if: matrix.os == 'macos-latest'
-        run: xcode-select --install
+        run: echo "export SDKROOT=$(xcrun --show-sdk-path)" >> $GITHUB_ENV
 
       - name: Get universal dependencies
         run: zig fetch --save https://github.com/Not-Nik/raylib-zig/archive/devel.tar.gz
