--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -29,12 +29,23 @@ jobs:
           - os: windows-latest
             target: x86_64-windows
     runs-on: ${{ matrix.os }}
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      PR_NUMBER: ${{ github.event.number }}
+      
     steps:
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v2
         name: Setup zig
         with:
           version: 0.12.0
+
+      - name: "🏷️ Push tag"
+        uses: EndBug/latest-tag@latest
+        with:
+          # You can change the name of the tag with this input.
+          # Default: 'latest'
+          tag-name: ${{env.PR_NUMBER}}
         
       - name: Install dependencies (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
@@ -52,9 +63,7 @@ jobs:
         
       - name: Release
         uses: softprops/action-gh-release@v1
-#        if: startsWith(github.ref, 'refs/tags/')
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
             zig-out/bin/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
