--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -18,27 +18,29 @@ jobs:
       - run: zig fmt --check .
 
   build:
+    permissions: write-all
     strategy:
       matrix:
         os: [macos-latest, windows-latest, ubuntu-latest]
     runs-on: ${{ matrix.os }}
-#    env:
-#      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#      PR_NUMBER: ${{ github.event.number }}
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      PR_NUMBER: ${{ github.event.number }}
       
     steps:
       - uses: actions/checkout@v2
-      - uses: goto-bus-stop/setup-zig@v2
-        name: Setup zig
-        with:
-          version: 0.12.0
-
+      
       - name: "🏷️ Push tag"
         uses: EndBug/latest-tag@latest
         with:
           # You can change the name of the tag with this input.
           # Default: 'latest'
           ref: ${{env.PR_NUMBER}}
+          
+      - uses: goto-bus-stop/setup-zig@v2
+        name: Setup zig
+        with:
+          version: 0.12.0
         
       - name: Install dependencies (Ubuntu)
         if: matrix.os == 'ubuntu-latest'
@@ -60,6 +62,3 @@ jobs:
         with:
           files: |
             zig-out/bin/*
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          PR_NUMBER: ${{ github.event.number }}
