--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -54,7 +54,9 @@ jobs:
         run: zig fetch --save https://github.com/Not-Nik/raylib-zig/archive/devel.tar.gz
           
       - name: Build binary
-        run: zig build -Doptimize=ReleaseSafe #-Dtarget=${{ matrix.target }}
+        run: |
+          zig build -Doptimize=ReleaseSafe #-Dtarget=${{ matrix.target }}
+          mv zig-out/bin/mach-mess zig-out/bin/diab-concept_${{ matrix.os }}-${{ matrix.target }}
         
       - name: Release
         uses: softprops/action-gh-release@v1
