--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -55,7 +55,7 @@ jobs:
           
       - name: Build binary
         run: |
-          zig build -Doptimize=ReleaseSafe #-Dtarget=${{ matrix.target }}
+          zig build -Doptimize=ReleaseSafe
           mv zig-out/bin/mach-mess zig-out/bin/diab-concept_${{ matrix.os }}-${{ matrix.target }}
         
       - name: Release
