--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -25,7 +25,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      PR_NUMBER: $(jq --raw-output .pull_request.number "$GITHUB_EVENT_PATH")
+      PR_NUMBER: ${{ github.event.number }}
       
     steps:
       - uses: actions/checkout@v2
@@ -58,9 +58,38 @@ jobs:
           zig build -Doptimize=ReleaseSafe
           mv zig-out/bin/mach-mess zig-out/bin/diab-concept_${{ matrix.os }}-${{ matrix.target }}
         
-      - name: Release
-        uses: softprops/action-gh-release@v1
-        if: github.ref == 'refs/heads/main'
+#      - name: Release
+#        uses: softprops/action-gh-release@v1
+#        if: github.ref == 'refs/heads/main'
+#        with:
+#          files: |
+#            zig-out/bin/*
+
+      - name: Changelog
+        uses: scottbrenner/generate-changelog-action@master
+        id: Changelog
+        env:
+          REPO: ${{ github.repository }}
+
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@latest
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          files: |
-            zig-out/bin/*
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          body: |
+            ${{ steps.Changelog.outputs.changelog }}
+          draft: false
+          prerelease: false
+
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: zig-out/bin/diab-concept_${{ matrix.os }}-${{ matrix.target }}
+          asset_name: diab-concept_${{ matrix.os }}-${{ matrix.target }}
