--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -55,7 +55,7 @@ jobs:
           
       - name: Build binary
         run: |
-          zig build-exe src/main.zig -Doptimize=ReleaseSafe
+          zig build -Doptimize=ReleaseSafe
 
       - name: Rename binary (MacOS, Ubuntu)
         if: matrix.os != 'windows-latest'
