--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -54,16 +54,17 @@ jobs:
         run: zig fetch --save https://github.com/Not-Nik/raylib-zig/archive/devel.tar.gz
           
       - name: Build binary
-        run: |
-          zig build -Doptimize=ReleaseSafe
+        run: zig build -Doptimize=ReleaseSafe
 
       - name: Rename binary (MacOS, Ubuntu)
         if: matrix.os != 'windows-latest'
-        run: mv zig-out/bin/mach-mess zig-out/bin/diab-concept_${{ matrix.os }}-${{ matrix.target }}
+        run: |
+          mv zig-out/bin/mach-mess zig-out/bin/diab-concept_${{ matrix.os }}-${{ matrix.target }}
+          chmod +x zig-out/bin/diab-concept_${{ matrix.os }}-${{ matrix.target }}
 
       - name: Rename binary (Windows)
         if: matrix.os == 'windows-latest'
-        run: ren zig-out\bin\mach-mess zig-out\bin\diab-concept_${{ matrix.os }}-${{ matrix.target }}
+        run: ren zig-out\bin\mach-mess zig-out\bin\diab-concept_${{ matrix.os }}-${{ matrix.target }}.exe
 
       - name: Release
         uses: softprops/action-gh-release@v1
