--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -66,12 +66,12 @@ jobs:
       - name: Rename binary (MacOS, Ubuntu)
         if: matrix.os != 'windows-latest'
         run: |
-          mv zig-out/bin/mach-mess zig-out/bin/diab-concept_${{ matrix.os }}-${{ matrix.target }}
-          chmod +x zig-out/bin/diab-concept_${{ matrix.os }}-${{ matrix.target }}
+          mv zig-out/bin/DiaB-concept zig-out/bin/DiaB-concept_${{ matrix.os }}-${{ matrix.target }}
+          chmod +x zig-out/bin/DiaB-concept_${{ matrix.os }}-${{ matrix.target }}
 
       - name: Rename binary (Windows)
         if: matrix.os == 'windows-latest'
-        run: ren zig-out\bin\mach-mess zig-out\bin\diab-concept_${{ matrix.os }}-${{ matrix.target }}.exe
+        run: ren zig-out\bin\DiaB-concept zig-out\bin\DiaB-concept_${{ matrix.os }}-${{ matrix.target }}.exe
 
       - name: Release
         uses: softprops/action-gh-release@v1
