--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -32,19 +32,14 @@ jobs:
     runs-on: ${{ matrix.os }}
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      PR_NUMBER: ${{ github.event.number }}
       
     steps:
       - uses: actions/checkout@v2
       
-      - name: "🏷️ Push tag"
-        uses: EndBug/latest-tag@latest
-        with:
-          # You can change the name of the tag with this input.
-          # Default: 'latest'
-          ref: ${{env.PR_NUMBER}}
-          tag-name: ${{env.PR_NUMBER}}
-          
+      - name: Get commit hash
+        id: commit
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+      
       - uses: goto-bus-stop/setup-zig@v2
         name: Setup zig
         with:
@@ -76,8 +71,10 @@ jobs:
 
       - name: Release
         uses: softprops/action-gh-release@v1
-       # if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main'
         with:
-         tag_name: ${{env.PR_NUMBER}}
-         files: |
-           zig-out/bin/*
+          tag_name: ${{ steps.commit.outputs.sha_short }}
+          name: Release ${{ steps.commit.outputs.sha_short }}
+          files: |
+            zig-out/bin/*
+          generate_release_notes: true
