--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -102,41 +102,28 @@ jobs:
         id: get_version
         run: |
           VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
+          MAJOR=$(echo $VERSION | cut -d. -f1 | sed 's/v//')
+          MINOR=$(echo $VERSION | cut -d. -f2)
           PATCH=$(echo $VERSION | cut -d. -f3)
-          NEW_PATCH=$((PATCH+1))
-          NEW_VERSION="0.1.$NEW_PATCH"
+          if [ "$MAJOR" -eq 0 ] && [ "$MINOR" -eq 0 ]; then
+            NEW_VERSION="0.1.0"
+          else
+            NEW_PATCH=$((PATCH+1))
+            NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
+          fi
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: List files
+        run: |
+          echo "Current directory contents:"
+          ls -R
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ steps.get_version.outputs.new_version }}
-          release_name: Release v${{ steps.get_version.outputs.new_version }}
-          draft: false
-          prerelease: false
+          name: Release v${{ steps.get_version.outputs.new_version }}
+          files: ./**/DiaB-concept_*
           generate_release_notes: true
-
-      - name: Upload Release Assets
-        uses: actions/github-script@v6
-        with:
-          github-token: ${{secrets.GITHUB_TOKEN}}
-          script: |
-            const fs = require('fs').promises;
-            const glob = require('glob');
-            const { repo: { owner, repo }, sha } = context;
-            console.log('Current working directory:', process.cwd());
-            const files = glob.sync('./**/DiaB-concept_*');
-            console.log('Found files:', files);
-            for (const file of files) {
-              console.log('Uploading:', file);
-              await github.rest.repos.uploadReleaseAsset({
-                owner,
-                repo,
-                release_id: ${{ steps.create_release.outputs.id }},
-                name: file.split('/').pop(),
-                data: await fs.readFile(file)
-              });
-            }
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
