--- a/.github/workflows/build_and_release.yml
+++ b/.github/workflows/build_and_release.yml
@@ -103,29 +103,46 @@ jobs:
       - name: Download all artifacts
         uses: actions/download-artifact@v2
 
+      - name: Determine release type
+        id: release_type
+        run: |
+          # Check for #major, #minor, #patch in the latest commit message
+          COMMIT_MSG=$(git log -1 --pretty=%B)
+          if [[ $COMMIT_MSG == *#major* ]]; then
+            echo "type=major" >> $GITHUB_OUTPUT
+          elif [[ $COMMIT_MSG == *#minor* ]]; then
+            echo "type=minor" >> $GITHUB_OUTPUT
+          elif [[ $COMMIT_MSG == *#patch* ]]; then
+            echo "type=patch" >> $GITHUB_OUTPUT
+          else
+            # Default to patch if not specified
+            echo "type=patch" >> $GITHUB_OUTPUT
+          fi
+
       - name: Get version
         id: get_version
         run: |
           LATEST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "v0.0.0")
           echo "Latest tag: $LATEST_TAG"
           
-          if [[ $LATEST_TAG == v0.0.0 ]]; then
-            NEW_VERSION="0.1.0"
+          # Remove 'v' prefix
+          VERSION=${LATEST_TAG#v}
+          
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+          
+          RELEASE_TYPE="${{ steps.release_type.outputs.type }}"
+          echo "Release type: $RELEASE_TYPE"
+          
+          if [[ $RELEASE_TYPE == "major" ]]; then
+            NEW_VERSION="$((MAJOR+1)).0.0"
+          elif [[ $RELEASE_TYPE == "minor" ]]; then
+            NEW_VERSION="$MAJOR.$((MINOR+1)).0"
           else
-            MAJOR=$(echo $LATEST_TAG | cut -d. -f1 | sed 's/v//')
-            MINOR=$(echo $LATEST_TAG | cut -d. -f2)
-            PATCH=$(echo $LATEST_TAG | cut -d. -f3)
-            NEW_PATCH=$((PATCH+1))
-            NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
+            NEW_VERSION="$MAJOR.$MINOR.$((PATCH+1))"
           fi
           
           echo "new_version=$NEW_VERSION" >> $GITHUB_OUTPUT
           echo "New version: $NEW_VERSION"
-
-      - name: List files
-        run: |
-          echo "Current directory contents:"
-          ls -R
 
       - name: Create tag
         env:
@@ -147,6 +164,7 @@ jobs:
           name: Release v${{ env.NEW_VERSION }}
           files: ./**/DiaB-concept_*
           generate_release_notes: true
+
 
       - name: Debug
         if: failure()
